After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 689596 - Potential crash in gupnp-dlna-native-info-value.c
Potential crash in gupnp-dlna-native-info-value.c
Status: RESOLVED FIXED
Product: gupnp-dlna
Classification: Other
Component: General
0.9.x
Other Linux
: Normal normal
: ---
Assigned To: GUPnP Maintainers
GUPnP Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-12-04 09:11 UTC by Mark Ryan
Modified: 2019-02-22 06:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to fix NULL pointer dereference problem (1.12 KB, patch)
2012-12-04 09:11 UTC, Mark Ryan
committed Details | Review

Description Mark Ryan 2012-12-04 09:11:42 UTC
Created attachment 230630 [details] [review]
Patch to fix NULL pointer dereference problem

There is a potential crash in the value_new function of gupnp-dlna-native-info-value.c which could lead to a NULL pointer being dereferenced.  Please see the attached patch for more details.