Fixed a potential crash in the native backend.

Fixed a potential NULL pointer dereference problem in the value_new function
in gupnp-dlna-native-info-value.c.

https://bugzilla.gnome.org/show_bug.cgi?id=689596